--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ramabhadra&display=swap" rel="stylesheet">    
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ramabhadra&display=swap" rel="stylesheet">
 <link  rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="assets/css/main.css">    
 <title>100 things to do be for hight school</title>    
@@ -10,13 +15,13 @@
 <body>
 <div class="container">
 <div class="row">
-<div class="col-md-2"></div>    
-<div class="col-md-8">
+<div class="col-md-1"></div>    
+<div class="col-md-10">
     <header>    
 <h1>about 100 things to do before high school</h1>
    </header>
     </div>    
-<div class="col-md-2"></div>    
+<div class="col-md-1"></div>    
     </div>
     
 <div class="row">   
